--- a/src/localization/CMakeLists.txt
+++ b/src/localization/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package(rclcpp REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
 find_package(std_msgs REQUIRED)
+find_package(visualization_msgs REQUIRED)
 find_package(Eigen3 3.3 REQUIRED)
 find_package(fmt REQUIRED)
 find_package(TBB REQUIRED)
@@ -33,13 +34,13 @@ add_executable(ekf
 target_link_libraries(ekf Eigen3::Eigen fmt::fmt)
 ament_target_dependencies(ekf rclcpp sensor_msgs std_msgs nav_msgs)
 
-# add_executable(particle_filter
-#   src/ParticleFilterMiddleware.cpp
-#   src/ParticleFilter.cpp
-# )
+add_executable(particle_filter
+  src/ParticleFilterMiddleware.cpp
+  src/ParticleFilter.cpp
+)
 
-# target_link_libraries(particle_filter Eigen3::Eigen fmt::fmt TBB::tbb)
-# ament_target_dependencies(particle_filter rclcpp)
+target_link_libraries(particle_filter Eigen3::Eigen fmt::fmt TBB::tbb)
+ament_target_dependencies(particle_filter rclcpp visualization_msgs)
 
 add_executable(particle_filter_simulator
   src/ParticleFilterSimulator.cpp
@@ -51,7 +52,7 @@ ament_target_dependencies(particle_filter_simulator rclcpp)
 
 install(TARGETS
   ekf
-  # particle_filter
+  particle_filter
   particle_filter_simulator
   DESTINATION lib/${PROJECT_NAME})
 
